--- a/layouts/partials/menu-filetree.html
+++ b/layouts/partials/menu-filetree.html
@@ -1,98 +1,52 @@
-{{ $current := . }}
-{{ template "tree-nav" dict "sect" .Site.Home.Sections "current" $current }}
+{{ $currentNode := . }}
 
+<!-- Run through the tree-nav template for each section -->
+{{ range .Site.Home.Sections.ByTitle }}
+  {{ template "tree-nav" dict "sect" . "currentnode" $currentNode }}
+{{ end }}
 
-<!-- templates -->
+<!-- Template -->
 {{ define "tree-nav" }}
-  {{ $current := .current }}
-
-
+  {{ $currentNode := .currentnode }}
   <ul class="gdoc-nav__list">
-    {{ $sortBy := (default "title" .current.Site.Params.GeekdocFileTreeSortBy | lower) }}
-    {{ range .sect.GroupBy "Weight" }}
-      {{ $rangeBy := .ByTitle }}
-
-      {{ if eq $sortBy "title" }}
-        {{ $rangeBy = .ByTitle }}
-      {{ else if eq $sortBy "linktitle" }}
-        {{ $rangeBy = .ByLinkTitle }}
-      {{ else if eq $sortBy "date" }}
-        {{ $rangeBy = .ByDate }}
-      {{ else if eq $sortBy "publishdate" }}
-        {{ $rangeBy = .ByPublishDate }}
-      {{ else if eq $sortBy "expirydate" }}
-        {{ $rangeBy = .ByExpiryDate }}
-      {{ else if eq $sortBy "lastmod" }}
-        {{ $rangeBy = .ByLastmod }}
-      {{ else if eq $sortBy "title_reverse" }}
-        {{ $rangeBy = .ByTitle.Reverse }}
-      {{ else if eq $sortBy "linktitle_reverse" }}
-        {{ $rangeBy = .ByLinkTitle.Reverse }}
-      {{ else if eq $sortBy "date_reverse" }}
-        {{ $rangeBy = .ByDate.Reverse }}
-      {{ else if eq $sortBy "publishdate_reverse" }}
-        {{ $rangeBy = .ByPublishDate.Reverse }}
-      {{ else if eq $sortBy "expirydate_reverse" }}
-        {{ $rangeBy = .ByExpiryDate.Reverse }}
-      {{ else if eq $sortBy "lastmod_reverse" }}
-        {{ $rangeBy = .ByLastmod.Reverse }}
-      {{ end }}
-
-      {{ range $rangeBy }}
-        {{ if not .Params.GeekdocHidden }}
-          {{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
-          {{ $isParent := and (ne $numberOfPages 0) (not .Params.GeekdocFlatSection) }}
-          {{ $isCurrent := eq $current . }}
-          {{ $isAncestor := .IsAncestor $current }}
-          {{ $id := substr (sha1 .Permalink) 0 8 }}
-          {{ $doCollapse := and $isParent (or .Params.GeekdocCollapseSection (default false .Site.Params.GeekdocCollapseAllSections)) }}
-
-
-          <li>
-            <input
-              type="checkbox"
-              {{ if $doCollapse }}
-                class="gdoc-nav__toggle" id="{{ printf "navtree-%s" $id }}"
-                {{ if or $isCurrent $isAncestor }}checked{{ end }}
-              {{ else }}
-                class="hidden"
-              {{ end }}
-            />
-            <label
-              {{ if $doCollapse }}
-                for="{{ printf "navtree-%s" $id }}" class="flex justify-between align-center"
-              {{ end }}
-            >
-              {{ if or .Content .Params.GeekdocFlatSection }}
-                <span class="flex">
-                  <a
-                    href="{{ .RelPermalink }}"
-                    class="gdoc-nav__entry{{- if eq $current . }}
-                      {{- printf " is-active" }}
-                    {{- end }}"
-                  >
-                    {{ partial "utils/title" . }}
-                  </a>
-                </span>
-              {{ else }}
-                <span class="flex">{{ partial "utils/title" . }}</span>
-              {{ end }}
-              {{ if $doCollapse }}
-                <svg class="gdoc-icon toggle gdoc_keyboard_arrow_left">
-                  <use xlink:href="#gdoc_keyboard_arrow_left"></use>
-                </svg>
-                <svg class="gdoc-icon toggle gdoc_keyboard_arrow_down">
-                  <use xlink:href="#gdoc_keyboard_arrow_down"></use>
-                </svg>
-              {{ end }}
-            </label>
-
-            {{ if $isParent }}
-              {{ template "tree-nav" dict "sect" .Pages "current" $current }}
-            {{ end }}
-          </li>
+  {{ with .sect}}
+    {{ if .IsSection }}
+      {{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
+      {{ if ne $numberOfPages 0 }}
+      <li>
+        {{ if or (.IsAncestor $currentNode) (.InSection $currentNode) }}
+          <details open="true">
+        {{ else -}}
+          <details>
         {{ end }}
+      <summary>
+        <a href="{{ .RelPermalink}}" class="gdoc-nav__entry {{ if eq $currentNode . }}is-active{{ end }}">{{safeHTML .Params.Pre}}{{.Title}}{{safeHTML .Params.Post}}</a>
+      </summary>
+      {{ else }}
+      <li class="page">
+        <a href="{{ .RelPermalink}}" class="gdoc-nav__entry {{ if eq $currentNode . }}is-active{{ end }}">{{safeHTML .Params.Pre}}{{.Title}}{{safeHTML .Params.Post}}</a>
       {{ end }}
+      {{ if ne $numberOfPages 0 }}
+        <ul class="gdoc-nav__list">
+          {{ .Scratch.Set "pages" .Pages }}
+          {{ if .Sections}}
+          {{ .Scratch.Set "pages" (.Pages | union .Sections) }}
+          {{ end }}
+          {{ $pages := (.Scratch.Get "pages") }}
+          {{ range $pages.ByTitle }}
+            {{ if and .Params.hidden (not $.showhidden) }}
+            {{ else }}
+            {{ template "tree-nav" dict "sect" . "currentnode" $currentNode }}
+            {{ end }}
+          {{ end }}
+        </ul>
+      {{ end }}
+      </li>
+    {{ else }}
+      <li class="page">
+        <a href="{{ .RelPermalink}}" class="gdoc-nav__entry {{ if eq $currentNode . }}is-active{{ end }}">{{safeHTML .Params.Pre}}{{.LinkTitle}}{{safeHTML .Params.Post}}</a>
+      </li>
     {{ end }}
+  {{ end }}
   </ul>
 {{ end }}
